# UART_Command_Center

./: CMakeLists.txt  prj.conf
include/: command_lights.h  command_sensors.h  commands.h  lights_control.h  menu.h  menu_actions.h  menu_display.h  uart_handler.h
src/: main.c  uart_handler.c
src/commands/: command_lights.c  command_sensors.c  commands_core.c
src/drivers/: lights_control.c
src/menu/: menu_actions.c  menu_core.c  menu_display.c
tests/: CMakeLists.txt  prj.conf  test_commands.c  test_lights_control.c  test_uart_handler.c
